workspace-sf/force-app/main/default/objects/FavorecidoRemuneracaoContrato__c/FavorecidoRemuneracaoContrato__c.object-meta.xml
<CustomObject>
    <label>Favorecido da Remuneração do Contrato</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Favorecido da Remuneração do Contrato</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Favorecidos da Remuneração do Contrato</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>