workspace-sf/force-app/main/default/objects/FavorecidoRemuneracaoContrato__c/fields/CorretorLider__c.field-meta.xml
<CustomField>
    <fullName>CorretorLider__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Corretor Lider</label>
    <type>Checkbox</type>
</CustomField>