workspace-sf/force-app/main/default/objects/FavorecidoRemuneracaoContrato__c/fields/DadosCorretor__c.field-meta.xml
<CustomField>
    <fullName>DadosCorretor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dados do corretor</label>
    <referenceTo>DadosCorretor__c</referenceTo>
    <relationshipLabel>Favorecidos da Remuneração do Contrato</relationshipLabel>
    <relationshipName>FavorecidosRemuneracaoContrato</relationshipName>
    <type>Lookup</type>
</CustomField>