workspace-sf/force-app/main/default/objects/FavorecidoRemuneracaoContrato__c/fields/RemuneracaoContrato__c.field-meta.xml
<CustomField>
    <fullName>RemuneracaoContrato__c</fullName>
    <label>Remuneração do contrato</label>
    <referenceTo>RemuneracaoContrato__c</referenceTo>
    <relationshipLabel>Favorecidos da Remuneração do Contrato</relationshipLabel>
    <relationshipName>FavorecidosContrato</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>