workspace-sf/force-app/main/default/objects/FavorecidoRemuneracaoContrato__c/fields/SusepOrcamento__c.field-meta.xml
<CustomField>
    <fullName>SusepOrcamento__c</fullName>
    <label>Susep Orçamento</label>
    <length>50</length>
    <type>Text</type>
</CustomField>