workspace-sf/force-app/main/default/objects/FavorecidoRemuneracaoContrato__c/validationRules/ValidarParticipacao.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarParticipacao</fullName>
    <active>true</active>
    <description>Impede o cadastro de participações com mais de 100%</description>
    <errorConditionFormula>Participacao__c  &gt; 1</errorConditionFormula>
    <errorDisplayField>Participacao__c</errorDisplayField>
    <errorMessage>A participação não pode passar de 100%</errorMessage>
</ValidationRule>